fix:Overflow-x

--- a/homepage.css
+++ b/homepage.css
@@ -18,7 +18,7 @@ body {
   flex-direction: column;
   align-items: center;
   width: 100vw;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 /* ======================== Navbar ======================== */
 .navbar {
